<?xml version="1.0"?>
<package format="3">
  <name>mmlove_stereo_recorder</name>
  <version>0.0.1</version>
  <description>Launch and recording helpers for the MMLove stereo USB camera</description>
  <maintainer email="zaream@hawaii.edu">Munir Zarea</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
